--- a/example/index.html
+++ b/example/index.html
@@ -2,9 +2,8 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link rel="stylesheet" href="../assets/chessground.css">
-    <link rel="stylesheet" href="../assets/theme.css">
-    <link rel="stylesheet" href="../assets/examples.css">
+    <link rel="stylesheet" href="assets/shogiground.css">
+    <link rel="stylesheet" href="assets/theme.css">
 </head>
 
 <body>
