Board sfen and hand sfen inside sfen in config

--- a/examples/index.html
+++ b/examples/index.html
@@ -27,10 +27,13 @@
         console.log(e.target);
       }
       const config = {
+        sfen: {
+          board: 'lnsgkgsnl/1r5b1/+ppppppppp/9/9/9/PPPPPPPPP/1B5R1/LNSGKGS+NL',
+          hands: '12P3r',
+        },
         resizable: true,
         orientation: 'sente',
         renderHands: true,
-        hands: '12P',
         grid: true,
       };
       const ground = Shogiground(document.getElementById('dirty'), config);
