--- a/examples/tall.html
+++ b/examples/tall.html
@@ -23,8 +23,12 @@
     <script src="../dist/shogiground.js"></script>
     <script>
       const config = {
+        sfen: {
+          board: 'lnsgkgsnl/1r5b1/+ppppppppp/9/9/9/PPPPPPPPP/1B5R1/LNSGKGS+NL',
+          hands: 'R12P3r',
+        },
         resizable: true,
-        orientation: 'sente',
+        orientation: 'gote',
         grid: true,
       };
       const ground = Shogiground(document.getElementById('dirty'), config);
