Add comment about why we scale pieces
With time I would like to stop doing that - move all pieces to svg

--- a/examples/index.html
+++ b/examples/index.html
@@ -26,8 +26,9 @@
       const config = {
         sfen: {
           board: 'lnsgkgsnl/1r5b1/+ppppppppp/9/9/9/PPPPPPPPP/1B5R1/LNSGKGS+NL',
-          hands: 'R12P3r',
+          hands: 'RN12P3r',
         },
+        activeColor: 'sente',
         resizable: true,
         orientation: 'sente',
         grid: true,
