--- a/examples/tall.html
+++ b/examples/tall.html
@@ -16,7 +16,7 @@
           </li>
         </ul>
       </nav>
-      <div class="main-board">
+      <div style="width: 500px; height: 500px" class="main-board">
         <div id="dirty" class="sg-wrap tall"></div>
       </div>
     </div>
