--- a/examples/hands.html
+++ b/examples/hands.html
@@ -35,7 +35,7 @@
           enabled: true,
         },
       };
-      Shogiground(document.getElementById('dirty'), {});
+      Shogiground(document.getElementById('dirty'), config);
     </script>
   </body>
 </html>
