--- a/examples/index.html
+++ b/examples/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="assets/css/base.css" />
     <link rel="stylesheet" href="assets/css/shogiground.css" />
-    <link rel="stylesheet" href="assets/css/themes/wood-grid.css" />
+    <link rel="stylesheet" href="assets/css/themes/bird.css" />
     <link rel="stylesheet" href="assets/css/pieces/ryoko.css" />
   </head>
 
