--- a/examples/hands.html
+++ b/examples/hands.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="assets/css/base.css" />
     <link rel="stylesheet" href="assets/css/shogiground.css" />
     <link rel="stylesheet" href="assets/css/hands.css" />
-    <link rel="stylesheet" href="assets/css/themes/checker.css" />
+    <link rel="stylesheet" href="assets/css/themes/wood-grid.css" />
     <link rel="stylesheet" href="assets/css/pieces/ryoko.css" />
   </head>
 
@@ -25,8 +25,8 @@
     <script>
       const config = {
         sfen: {
-          board: 'lnsgkgsnl/1r5b1/ppppppppp/9/9/9/+P+P+P+P+P+P+P+P+P/1B5R1/LNSGKGSNL',
-          hands: 'R2P12l10p',
+          board: 'lnsgkgsnl/1r5b1/ppppppppp/9/9/9/PPPPPPPPP/1B5R1/LNSGKGSNL',
+          hands: '',
         },
         activeColor: 'sente',
         resizable: true,
