Separate dragged piece element, drag overlay for touch, some small tweaks

--- a/examples/hands.html
+++ b/examples/hands.html
@@ -26,7 +26,7 @@
       const config = {
         sfen: {
           board: 'lnsgkgsnl/1r5b1/ppppppppp/9/9/9/PPPPPPPPP/1B5R1/LNSGKGSNL',
-          hands: '',
+          hands: 'Pp',
         },
         activeColor: 'sente',
         resizable: true,
