--- a/examples/d5x5.html
+++ b/examples/d5x5.html
@@ -40,7 +40,7 @@
           enabled: false,
         },
       };
-      const ground = Shogiground(document.getElementById('dirty'), config);
+      const ground = Shogiground({ board: document.getElementById('dirty') }, config);
       function flip() {
         ground.toggleOrientation();
       }
