--- a/examples/hands.html
+++ b/examples/hands.html
@@ -39,11 +39,11 @@
           hands: '2PR11Bp3n',
         },
         activeColor: 'sente',
-        resizable: true,
         orientation: 'sente',
         draggable: {
           enabled: true,
           deleteOnDropOff: false,
+          addToHandOnDropOff: false,
         },
       };
       const sg = Shogiground(
