--- a/examples/minis.html
+++ b/examples/minis.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -51,13 +52,51 @@
       <div class="board-wrap main-board"><div class="board sg-wrap"></div></div>
       <div class="board-wrap main-board"><div class="board sg-wrap"></div></div>
       <div class="board-wrap main-board"><div class="board sg-wrap"></div></div>
+      <div class="board-wrap main-board"><div class="board sg-wrap"></div></div>
+      <div class="board-wrap main-board"><div class="board sg-wrap"></div></div>
+      <div class="board-wrap main-board"><div class="board sg-wrap"></div></div>
+      <div class="board-wrap main-board"><div class="board sg-wrap"></div></div>
+      <div class="board-wrap main-board"><div class="board sg-wrap"></div></div>
+      <div class="board-wrap main-board"><div class="board sg-wrap"></div></div>
+      <div class="board-wrap main-board"><div class="board sg-wrap"></div></div>
+      <div class="board-wrap main-board"><div class="board sg-wrap"></div></div>
+      <div class="board-wrap main-board"><div class="board sg-wrap"></div></div>
+      <div class="board-wrap main-board"><div class="board sg-wrap"></div></div>
+      <div class="board-wrap main-board"><div class="board sg-wrap"></div></div>
+      <div class="board-wrap main-board"><div class="board sg-wrap"></div></div>
+      <div class="board-wrap main-board"><div class="board sg-wrap"></div></div>
+      <div class="board-wrap main-board"><div class="board sg-wrap"></div></div>
+      <div class="board-wrap main-board"><div class="board sg-wrap"></div></div>
+      <div class="board-wrap main-board"><div class="board sg-wrap"></div></div>
+      <div class="board-wrap main-board"><div class="board sg-wrap"></div></div>
+      <div class="board-wrap main-board"><div class="board sg-wrap"></div></div>
+      <div class="board-wrap main-board"><div class="board sg-wrap"></div></div>
+      <div class="board-wrap main-board"><div class="board sg-wrap"></div></div>
     </div>
   </body>
   <script src="../dist/shogiground.js"></script>
   <script>
     const boards = document.getElementsByClassName('board');
+    let start = new Date();
     for (let i = 0; i < boards.length; i++) {
-      Shogiground({ board: boards[i] }, { viewOnly: true, hands: { enabled: false }, drawable: { visible: false } });
+      Shogiground(
+        { board: boards[i] },
+        {
+          coordinates: { enabled: false },
+          viewOnly: true,
+          hands: { enabled: false },
+          drawable: { visible: false },
+        }
+      );
     }
+    // log the duration (deferred by 0ms timer)
+    setTimeout(() => {
+      let t2 = new Date() - start;
+      console.log(`t2: ${t2} ms`);
+    }, 0);
+
+    // log the duration instantly
+    let t1 = new Date() - start;
+    console.log(`t1: ${t1} ms`);
   </script>
 </html>
