--- a/examples/hands.html
+++ b/examples/hands.html
@@ -17,9 +17,9 @@
         <a href="minis.html">Mini Boards</a>
         <a href="d5x5.html">Small Board (5x5)</a>
       </nav>
-      <div class="wrap">
+      <div class="wrap" style="display: flex">
         <div id="hand-top" class="hand-wrap"></div>
-        <div style="width: 500px" id="main-wrap" class="main-board">
+        <div style="width: 500px; height: 500px" id="main-wrap" class="main-board">
           <div id="dirty" class="sg-wrap"></div>
         </div>
         <div id="hand-bottom" class="hand-wrap"></div>
