Fix hand layout

--- a/examples/hands.html
+++ b/examples/hands.html
@@ -19,7 +19,7 @@
       </nav>
       <div class="wrap" style="display: flex">
         <div id="hand-top" class="hand-wrap"></div>
-        <div style="width: 500px; height: 500px" id="main-wrap" class="main-board">
+        <div style="width: 500px; height: calc(500px / 11 * 12)" id="main-wrap" class="main-board">
           <div id="dirty" class="sg-wrap"></div>
         </div>
         <div id="hand-bottom" class="hand-wrap"></div>
