--- a/examples/d12x12.html
+++ b/examples/d12x12.html
@@ -4,6 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="assets/css/base.css" />
     <link rel="stylesheet" href="assets/css/shogiground.css" />
+    <link rel="stylesheet" href="assets/css/d12x12.css" />
     <link rel="stylesheet" href="assets/css/themes/bird.css" />
     <link rel="stylesheet" href="assets/css/pieces/ryoko.css" />
   </head>
@@ -15,7 +16,6 @@
         <a href="hands.html">Board - hands</a>
         <a href="minis.html">Mini Boards</a>
         <a href="d5x5.html">Small Board (5x5)</a>
-        <a href="d12x12.html">Big Board (12x12)</a>
       </nav>
       <div style="width: 500px; height: 500px" id="main-wrap" class="main-board">
         <div id="dirty" class="sg-wrap"></div>
@@ -36,7 +36,7 @@
     <script>
       const config = {
         sfen: {
-          board: 'lnsgkgsnl/1r5b1/+ppppppppp/9/9/9/PPPP1PPPP/1B5R1/LNSGKGS+NL',
+          board: '1lnsgkkgsnl1/12/2r6b2/pppppppppppp/12/11p/P10P/12/PPPPPPPPPPPP/2B6R2/12/1LNSGKKGS+NL1',
         },
         activeColor: 'sente',
         coordinates: {
