--- a/examples/d5x5.html
+++ b/examples/d5x5.html
@@ -16,6 +16,7 @@
         <a href="hands.html">Board - hands</a>
         <a href="minis.html">Mini Boards</a>
         <a href="d5x5.html">Small Board (5x5)</a>
+        <a href="d12x12.html">Big Board (12x12)</a>
       </nav>
       <div style="width: 500px; height: 500px" class="main-board">
         <div id="dirty" class="sg-wrap"></div>
