--- a/examples/hands.html
+++ b/examples/hands.html
@@ -16,6 +16,7 @@
         <a href="hands.html">Board - hands</a>
         <a href="minis.html">Mini Boards</a>
         <a href="d5x5.html">Small Board (5x5)</a>
+        <a href="d12x12.html">Big Board (12x12)</a>
       </nav>
       <div class="wrap" style="display: flex">
         <div id="hand-top" class="hand-wrap"></div>
