--- a/examples/index.html
+++ b/examples/index.html
@@ -30,7 +30,7 @@
       <button onclick="move()">MOVE</button>
       <button onclick="promote()">PROMOTION</button>
       <button onclick="setPieces()">PIECES</button>
-      <button onclick="tmout(0)">TIMEOUT</button>
+      <button onclick="tmout(1500)">TIMEOUT</button>
     </div>
     <script src="../dist/shogiground.js"></script>
     <script>
@@ -65,6 +65,7 @@
       function pieceSVG() {
         const shape = {
           orig: '5e',
+          dest: '5e',
           brush: 'green',
           piece: {
             role: 'horse',
@@ -113,7 +114,7 @@
         });
       }
       function tmout(ms) {
-        setTimeout(reconf, ms);
+        setTimeout(pieceSVG, ms);
       }
     </script>
     <script>
