--- a/examples/hands.html
+++ b/examples/hands.html
@@ -38,7 +38,7 @@
       const config = {
         sfen: {
           board: 'lnsgkgsnl/1r5b1/ppppppppp/9/9/9/PPPPPPPPP/1B5R1/LNSGKGSNL',
-          hands: '2PR11Bp3n',
+          hands: 'G10NLb',
         },
         activeColor: 'sente',
         orientation: 'sente',
