Integrate promotion into sg
This adds some significant complexity, so I thought a lot if we really want this im sg. But anyone who wants to use this library will want promotions, so it's probably better to handle it here. This is also much easier for us in lila, we won't have to handle callbacks inside callbacks, and reset the whole sg config while promotion is cancelled.

--- a/examples/hands.html
+++ b/examples/hands.html
@@ -47,6 +47,16 @@
           deleteOnDropOff: false,
           addToHandOnDropOff: false,
         },
+        promotion: {
+          promotesTo: (role) => {
+            if (role === 'bishop') return 'horse';
+            if (role === 'pawn') return 'tokin';
+            if (role === 'knight') return 'promotedKnight';
+            if (role === 'silver') return 'promotedSilver';
+            if (role === 'rook') return 'dragon';
+            if (role === 'lance') return 'promotedLance';
+          },
+        },
       };
       const sg = Shogiground(
         {
