Shogiground now takes config first as the first arg and wrapElemets as second

--- a/examples/hands.html
+++ b/examples/hands.html
@@ -58,7 +58,7 @@
           },
         },
       };
-      const sg = Shogiground({}, config);
+      const sg = Shogiground(config);
       sg.wrap({
         board: document.getElementById('dirty'),
       });
