Wrap pieces in hand in another element

--- a/examples/hands.html
+++ b/examples/hands.html
@@ -38,7 +38,7 @@
       const config = {
         sfen: {
           board: 'lnsgkg1nl/1r5s1/pppppp1pp/6p2/9/2P6/PP1PPPPPP/7R1/LNSGKGSNL b Bb 5',
-          hands: 'Bb',
+          hands: 'B2b',
         },
         activeColor: 'sente',
         orientation: 'sente',
