Fix selected class when in check

--- a/examples/hands.html
+++ b/examples/hands.html
@@ -40,6 +40,7 @@
           board: 'lnsgkg1nl/1r5s1/pppppp1pp/6p2/9/2P6/PP1PPPPPP/7R1/LNSGKGSNL b Bb 5',
           hands: 'B2b',
         },
+        check: true,
         activeColor: 'sente',
         orientation: 'sente',
         draggable: {
