Fix scaled pieces positioning

--- a/examples/index.html
+++ b/examples/index.html
@@ -97,6 +97,7 @@
           piece: {
             role: 'horse',
             color: 'sente',
+            scale: 0.5,
           },
         };
         ground.setAutoShapes([shape]);
