Change default to empty board

--- a/examples/minis.html
+++ b/examples/minis.html
@@ -81,6 +81,9 @@
     for (let i = 0; i < boards.length; i++) {
       Shogiground(
         {
+          sfen: {
+            board: 'lnsgkgsnl/1r5b1/ppppppppp/9/9/9/PPPPPPPPP/1B5R1/LNSGKGSNL',
+          },
           coordinates: { enabled: false },
           viewOnly: true,
           hands: { enabled: false },
