Fix promotion dialog not appearing with selectable.enabled set to false
https://github.com/WandererXII/lishogi/issues/566

--- a/examples/index.html
+++ b/examples/index.html
@@ -49,6 +49,9 @@
         hands: {
           enabled: false,
         },
+        selectable: {
+          enabled: true,
+        },
         movable: {
           events: {
             after: (orig, dest, prom, metadata) => {
