--- a/examples/hands.html
+++ b/examples/hands.html
@@ -37,8 +37,8 @@
     <script>
       const config = {
         sfen: {
-          board: 'lnsgkg1nl/1r5s1/pppppp1pp/6p2/9/2P6/PP1PPPPPP/7R1/LNSGKGSNL b Bb 5',
-          hands: 'B2b',
+          board: 'lnsgkg1nl/1r5s1/pppppp1pp/6p2/9/2P6/PP1PPPPPP/7R1/LNSGKGSNL',
+          hands: 'B2r',
         },
         check: true,
         activeColor: 'sente',
